[gd_scene load_steps=6 format=3 uid="uid://d26cadldtrqk2"]

[ext_resource type="PackedScene" uid="uid://djed1dy2nlpio" path="res://scene/crosshair.tscn" id="1_4flbx"]
[ext_resource type="Script" uid="uid://84q2d1e11wpa" path="res://scripts/player.gd" id="1_onrkg"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qm0ti"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fhbv5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xo3ru"]
height = 1.9

[node name="Rob" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_onrkg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qm0ti")

[node name="Standing_collision_shape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_fhbv5")

[node name="Crouching_collision_shape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_xo3ru")
disabled = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10749, 0)

[node name="Eyes" type="Node3D" parent="Head"]

[node name="Camera3D" type="Camera3D" parent="Head/Eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.792988, -0.219408)

[node name="Crosshair2" parent="Head/Eyes/Camera3D" instance=ExtResource("1_4flbx")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 1.86265e-09, 0, -1.86265e-09, 0.05, 0, 0.0810865, -0.768137)

[node name="TorchBattery" type="Node3D" parent="Head/Eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.993894, 0.110341, 0, -0.110341, 0.993894, 0, -0.993894, 0.110341)

[node name="PickupRay" type="RayCast3D" parent="Head/Eyes"]
transform = Transform3D(1, 0, 0, 0, 0.997956, -0.0639053, 0, 0.0639053, 0.997956, 0, 0.874075, -0.987545)
target_position = Vector3(0, 0, -3)
collision_mask = 3

[node name="HoldPoint" type="Node3D" parent="Head/Eyes"]
transform = Transform3D(0.504528, -0.610513, -0.610513, 0, 0.707107, -0.707107, 0.863396, 0.356755, 0.356755, 0.372643, 0.372643, -1.42705)

[node name="Above_head" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(0, 2, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.22506, 0)
light_energy = 0.3
omni_range = 160.0

[node name="Hand" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.550974, 0)
